--- a/HRM/HRM.Web/HRM.Web.csproj
+++ b/HRM/HRM.Web/HRM.Web.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\Profiles\" />
+  </ItemGroup>
+
 </Project>
