--- a/HRM/HRM.Web/appsettings.json
+++ b/HRM/HRM.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HRDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HRM.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
